tests/parser-test-files/bad-files/define-instance.11.error
error: Malformed instance definition
  --> test:4:40
   |
 4 |  (define-instance (C :a => (C (List :a)) :b))
   |                                          ^^ unexpected form
